--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -14,7 +14,7 @@ jobs:
   build:
     env:
       NX_BRANCH: ${{ github.ref }}
-      NX_RUN_GROUP: ${{ github.action }}
+      NX_RUN_GROUP: ${{ github.run_id }}-${{ github.run_number }}
     runs-on: ${{ matrix.operating-system }}
     strategy:
       matrix:
