--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node dist/apps/api/main.js",
     "build": "yarn build:admin && yarn build:api",
     "test": "nx test",
-    "test:ci": "yarn nx run-many --target test --all && yarn e2e admin-e2e",
+    "test:ci": "yarn nx run-many --target test --all ",
     "lint": "nx workspace-lint && nx lint",
     "e2e": "nx e2e",
     "affected:apps": "nx affected:apps",
